// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`pipelines chrome_forward_testing matches snapshot 1`] = `
"env:
  GITHUB_COMMIT_STATUS_ENABLED: "false"
  USE_CHROME_BETA: "true"
steps:
  - command: .buildkite/scripts/lifecycle/pre_build.sh
    label: Pre-Build
    key: pre_build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    retry: &a1
      automatic:
        - exit_status: "*"
          limit: 1
  - command: .buildkite/scripts/steps/store_cache.sh
    label: Store Cache for build
    id: store_cache
    agents:
      machineType: n2-highcpu-8
    timeout_in_minutes: 10
    soft_fail: true
  - wait: null
  - command: .buildkite/scripts/steps/build_kibana.sh
    label: Build Kibana Distribution
    key: build
    agents:
      machineType: n2-standard-8
      preemptible: true
      diskSizeGb: 200
    timeout_in_minutes: 60
    retry: *a1
  - wait: null
  - command: .buildkite/scripts/steps/ci_stats_ready.sh
    label: Mark CI Stats as ready
    key: ci_stats_ready
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    depends_on:
      - build
    retry: *a1
  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
    label: Pick Test Group Run Order
    key: pick_test_group_run_order
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 15
    env:
      JEST_UNIT_SCRIPT: .buildkite/scripts/steps/test/jest.sh
      JEST_INTEGRATION_SCRIPT: .buildkite/scripts/steps/test/jest_integration.sh
      FTR_CONFIGS_SCRIPT: .buildkite/scripts/steps/test/ftr_configs.sh
      FTR_TEST_CHANNELS: ci-on-commit
      LIMIT_CONFIG_TYPE: functional
    retry: *a1
  - command: .buildkite/scripts/steps/test/scout/test_run_builder.sh
    label: Scout Test Run Builder
    key: build_scout_tests
    agents:
      machineType: n2d-standard-8
    timeout_in_minutes: 20
    env:
      SCOUT_TEST_DISTRIBUTION_STRATEGY: lanes
      SCOUT_TEST_LANES_GROUP_DEPS: build_scout_tests,build
      SCOUT_TEST_CHANNELS: ci-on-commit
      SCOUT_TEST_LANE_TARGET_RUNTIME_MINUTES: 20
    retry: *a1
  - command: .buildkite/scripts/steps/functional/security_serverless_entity_analytics.sh
    label: Serverless Entity Analytics - Security Cypress Tests
    agents: &a2
      machineType: n2-standard-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: &a3
      automatic:
        - exit_status: "-1"
          limit: 3
  - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
    label: Serverless Explore - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
    label: Serverless Investigations - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 14
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management.sh
    label: Serverless Rule Management - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_customization.sh
    label: Serverless Rule Management - Prebuilt Rules Customization - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_installation.sh
    label: Serverless Rule Management - Prebuilt Rules Installation - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_management.sh
    label: Serverless Rule Management - Prebuilt Rules Management - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_upgrade.sh
    label: Serverless Rule Management - Prebuilt Rules Upgrade - Security Solution
      Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management.sh
    label: Rule Management - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 6
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_customization.sh
    label: Rule Management - Prebuilt Rules Customization - Security Solution
      Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_installation.sh
    label: Rule Management - Prebuilt Rules Installation - Security Solution Cypress
      Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_management.sh
    label: Rule Management - Prebuilt Rules Management - Security Solution Cypress
      Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_upgrade.sh
    label: Rule Management - Prebuilt Rules Upgrade - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine.sh
    label: Serverless Detection Engine - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine_exceptions.sh
    label: Serverless Detection Engine - Exceptions - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine.sh
    label: Detection Engine - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 7
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine_exceptions.sh
    label: Detection Engine - Exceptions - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_ai_assistant.sh
    label: Serverless AI Assistant - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_ai_assistant.sh
    label: AI Assistant - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_entity_analytics.sh
    label: Entity Analytics - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_explore.sh
    label: Explore - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_investigations.sh
    label: Investigations - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 9
    retry: *a3
  - command: .buildkite/scripts/steps/functional/osquery_cypress.sh
    label: Osquery Cypress Tests
    agents: &a4
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_osquery.sh
    label: Osquery Cypress Tests on Serverless
    agents: *a4
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a3
  - command: .buildkite/scripts/steps/functional/defend_workflows.sh
    label: Defend Workflows Cypress Tests
    agents: &a5
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
      enableNestedVirtualization: true
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 24
    retry: *a3
  - command: .buildkite/scripts/steps/functional/defend_workflows_serverless.sh
    label: Defend Workflows Cypress Tests on Serverless
    agents: *a5
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 16
    retry: *a3
  - wait: null
    continue_on_failure: true
  - command: .buildkite/scripts/lifecycle/post_build.sh
    label: Post-Build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
"
`;

exports[`pipelines fips matches snapshot 1`] = `
"env:
  DISABLE_CI_STATS_SHIPPING: "true"
  TEST_BROWSER_HEADLESS: 1
steps:
  - command: .buildkite/scripts/lifecycle/pre_build.sh
    label: Pre-Build
    key: pre_build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    retry: &a1
      automatic:
        - exit_status: "*"
          limit: 1
  - wait: null
  - command: .buildkite/scripts/steps/store_cache.sh
    label: Store Cache for build
    id: store_cache
    agents:
      machineType: n2-highcpu-8
    timeout_in_minutes: 10
    soft_fail: true
    depends_on:
      - terrazzo-initial-pipeline-upload
  - command: .buildkite/scripts/steps/build_kibana.sh
    label: Build Kibana Distribution
    key: build
    agents:
      machineType: n2-standard-8
      preemptible: true
      diskSizeGb: 200
    timeout_in_minutes: 60
    retry:
      automatic:
        - exit_status: "-1"
          limit: 3
    if: build.env('KIBANA_BUILD_ID') == null || build.env('KIBANA_BUILD_ID') == ''
  - wait: null
  - command: .buildkite/pipelines/fips/verify_fips_enabled.sh
    label: Verify FIPS Enabled
    agents:
      machineType: n2-standard-2
      preemptible: true
    timeout_in_minutes: 10
  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
    label: Pick Test Group Run Order
    key: pick_test_group_run_order
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 15
    env:
      JEST_UNIT_SCRIPT: .buildkite/scripts/steps/test/jest.sh
      JEST_INTEGRATION_SCRIPT: .buildkite/scripts/steps/test/jest_integration.sh
      FTR_CONFIGS_SCRIPT: .buildkite/scripts/steps/test/ftr_configs.sh
      FTR_TEST_CHANNELS: ci-on-commit
      FTR_EXTRA_ARGS: $FTR_EXTRA_ARGS
    retry: *a1
  - command: .buildkite/scripts/steps/test/scout/test_run_builder.sh
    label: Scout Test Run Builder
    key: build_scout_tests
    agents:
      machineType: n2d-standard-8
    timeout_in_minutes: 20
    env:
      SCOUT_TEST_DISTRIBUTION_STRATEGY: lanes
      SCOUT_TEST_LANES_GROUP_DEPS: build_scout_tests,build
      SCOUT_TEST_CHANNELS: ci-on-commit
      SCOUT_TEST_LANE_TARGET_RUNTIME_MINUTES: 20
      SELECTIVE_TESTING_ENABLED: "false"
    retry: *a1
  - wait: null
    continue_on_failure: true
  - command: .buildkite/scripts/lifecycle/post_build.sh
    label: Post-Build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
"
`;

exports[`pipelines merge_queue matches snapshot 1`] = `
"env:
  GITHUB_COMMIT_STATUS_ENABLED: "true"
  GITHUB_COMMIT_STATUS_CONTEXT: kibana-ci
steps:
  - command: .buildkite/scripts/lifecycle/pre_build.sh
    label: Pre-Build
    key: pre_build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    retry: &a1
      automatic:
        - exit_status: "*"
          limit: 1
  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
    label: Pick Test Group Run Order
    key: pick_test_group_run_order
    agents:
      provider: k8s
      image: docker.elastic.co/ci-agent-images/kibana/ci-minimal
      imageUID: "1000"
    plugins:
      - sparse-checkout#v1.6.0:
          no_cone: true
          paths:
            - /.buildkite/
            - /.node-version
            - /package.json
            - /tsconfig.base.json
            - /versions.json
            - /kibana.jsonc
            - "**/kibana.jsonc"
            - "**/tsconfig.json"
            - "**/jest.config.js"
            - "**/jest.integration.config.js"
            - "**/*.test.js"
            - "**/*.test.mjs"
            - "**/*.test.ts"
            - "**/*.test.tsx"
          cleanup_sparse_state: true
          post_checkout:
            unshallow: true
    timeout_in_minutes: 15
    env:
      JEST_UNIT_SCRIPT: .buildkite/scripts/steps/test/jest.sh
      JEST_INTEGRATION_SCRIPT: .buildkite/scripts/steps/test/jest_integration.sh
      FTR_CONFIGS_SCRIPT: .buildkite/scripts/steps/test/ftr_configs.sh
      FTR_TEST_CHANNELS: ci-on-commit
      JEST_UNIT_MAX_MINUTES: "15.0"
      LIMIT_CONFIG_TYPE: unit
    retry: *a1
  - wait: null
    depends_on: pre_build
  - command: .buildkite/scripts/steps/on_merge_build_and_metrics.sh
    label: Build Kibana Distribution
    key: build
    agents:
      image: family/kibana-minimal-ubuntu-2604
      machineType: c4d-standard-16
      diskType: hyperdisk-balanced
      diskSizeGb: 50
      buildDirectory: /dev/shm/bk
      zones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d
    timeout_in_minutes: 60
    retry: *a1
  - command: .buildkite/scripts/steps/quick_checks.sh
    label: Quick Checks
    key: quick_checks
    agents:
      machineType: n2d-standard-8
      preemptible: true
      spotZones: us-central1-b,us-central1-c,us-central1-f
    timeout_in_minutes: 60
    retry: &a2
      automatic:
        - exit_status: "-1"
          limit: 3
  - command: .buildkite/scripts/steps/checks.sh
    label: Checks
    key: checks
    agents:
      machineType: n2d-standard-2
      preemptible: true
      spotZones: us-central1-b,us-central1-c,us-central1-f
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/lint.sh
    label: Linting
    key: linting
    agents:
      machineType: n4-standard-16
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/lint_with_types.sh
    label: Linting (with types)
    key: linting_with_types
    agents:
      machineType: n4-standard-32
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/typecheck/check_types.sh
    label: Check Types
    key: check_types
    agents:
      machineType: n4-highcpu-32
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/ci_stats_ready.sh
    label: Mark CI Stats as ready
    key: ci_stats_ready
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    depends_on:
      - build
    retry: *a1
  - wait: null
    continue_on_failure: true
  - command: .buildkite/scripts/lifecycle/post_build.sh
    label: Post-Build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
"
`;

exports[`pipelines node_glibc_217 matches snapshot 1`] = `
"env:
  CI_FORCE_NODE_GLIBC_217: "true"
steps:
  - command: .buildkite/scripts/lifecycle/pre_build.sh
    label: Pre-Build
    key: pre_build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    retry: &a1
      automatic:
        - exit_status: "*"
          limit: 1
  - wait: null
  - command: .buildkite/scripts/steps/on_merge_build_and_metrics.sh
    label: Build Kibana Distribution
    key: build
    agents:
      machineType: n2-standard-16
      preemptible: true
      diskSizeGb: 200
    timeout_in_minutes: 60
    retry: *a1
  - wait: null
  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
    label: Pick Test Group Run Order
    key: pick_test_group_run_order
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 15
    env:
      JEST_UNIT_SCRIPT: .buildkite/scripts/steps/test/jest.sh
      JEST_INTEGRATION_SCRIPT: .buildkite/scripts/steps/test/jest_integration.sh
      FTR_CONFIGS_SCRIPT: .buildkite/scripts/steps/test/ftr_configs.sh
      FTR_TEST_CHANNELS: ci-on-commit
    retry: *a1
  - command: .buildkite/scripts/steps/test/scout/test_run_builder.sh
    label: Scout Test Run Builder
    key: build_scout_tests
    agents:
      machineType: n2d-standard-8
    timeout_in_minutes: 20
    env:
      SCOUT_TEST_DISTRIBUTION_STRATEGY: lanes
      SCOUT_TEST_LANES_GROUP_DEPS: build_scout_tests,build
      SCOUT_TEST_CHANNELS: ci-on-commit
      SCOUT_TEST_LANE_TARGET_RUNTIME_MINUTES: 20
    retry: *a1
  - command: .buildkite/scripts/steps/functional/security_serverless_entity_analytics.sh
    label: Serverless Entity Analytics - Security Cypress Tests
    agents: &a2
      machineType: n2-standard-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: &a3
      automatic:
        - exit_status: "-1"
          limit: 3
  - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
    label: Serverless Explore - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
    label: Serverless Investigations - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 14
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management.sh
    label: Serverless Rule Management - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_customization.sh
    label: Serverless Rule Management - Prebuilt Rules Customization - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_installation.sh
    label: Serverless Rule Management - Prebuilt Rules Installation - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_management.sh
    label: Serverless Rule Management - Prebuilt Rules Management - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_upgrade.sh
    label: Serverless Rule Management - Prebuilt Rules Upgrade - Security Solution
      Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management.sh
    label: Rule Management - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 6
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_customization.sh
    label: Rule Management - Prebuilt Rules Customization - Security Solution
      Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_installation.sh
    label: Rule Management - Prebuilt Rules Installation - Security Solution Cypress
      Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_management.sh
    label: Rule Management - Prebuilt Rules Management - Security Solution Cypress
      Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_upgrade.sh
    label: Rule Management - Prebuilt Rules Upgrade - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine.sh
    label: Serverless Detection Engine - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine_exceptions.sh
    label: Serverless Detection Engine - Exceptions - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine.sh
    label: Detection Engine - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 7
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine_exceptions.sh
    label: Detection Engine - Exceptions - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_ai_assistant.sh
    label: Serverless AI Assistant - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_ai_assistant.sh
    label: AI Assistant - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_entity_analytics.sh
    label: Entity Analytics - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_explore.sh
    label: Explore - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_investigations.sh
    label: Investigations - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 9
    retry: *a3
  - command: .buildkite/scripts/steps/functional/osquery_cypress.sh
    label: Osquery Cypress Tests
    agents: &a4
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_osquery.sh
    label: Osquery Cypress Tests on Serverless
    agents: *a4
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a3
  - command: .buildkite/scripts/steps/functional/defend_workflows.sh
    label: Defend Workflows Cypress Tests
    agents: &a5
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
      enableNestedVirtualization: true
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 24
    retry: *a3
  - command: .buildkite/scripts/steps/functional/defend_workflows_serverless.sh
    label: Defend Workflows Cypress Tests on Serverless
    agents: *a5
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 16
    retry: *a3
  - wait: null
    continue_on_failure: true
  - command: .buildkite/scripts/lifecycle/post_build.sh
    label: Post-Build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
"
`;

exports[`pipelines node_pointer_compression matches snapshot 1`] = `
"env:
  CI_FORCE_NODE_POINTER_COMPRESSION: "true"
steps:
  - command: .buildkite/scripts/lifecycle/pre_build.sh
    label: Pre-Build
    key: pre_build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    retry: &a1
      automatic:
        - exit_status: "*"
          limit: 1
  - wait: null
  - command: .buildkite/scripts/steps/on_merge_build_and_metrics.sh
    label: Build Kibana Distribution
    key: build
    agents:
      machineType: n2-standard-16
      preemptible: true
      diskSizeGb: 200
    timeout_in_minutes: 60
    retry: *a1
    env:
      CI_FORCE_NODE_POINTER_COMPRESSION: "false"
  - wait: null
  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
    label: Pick Test Group Run Order
    key: pick_test_group_run_order
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 15
    env:
      JEST_UNIT_SCRIPT: .buildkite/scripts/steps/test/jest.sh
      JEST_INTEGRATION_SCRIPT: .buildkite/scripts/steps/test/jest_integration.sh
      FTR_CONFIGS_SCRIPT: .buildkite/scripts/steps/test/ftr_configs.sh
      FTR_TEST_CHANNELS: ci-on-commit
    retry: *a1
  - command: .buildkite/scripts/steps/test/scout/test_run_builder.sh
    label: Scout Test Run Builder
    key: build_scout_tests
    agents:
      machineType: n2d-standard-8
    timeout_in_minutes: 20
    env:
      SCOUT_TEST_DISTRIBUTION_STRATEGY: lanes
      SCOUT_TEST_LANES_GROUP_DEPS: build_scout_tests,build
      SCOUT_TEST_CHANNELS: ci-on-commit
      SCOUT_TEST_LANE_TARGET_RUNTIME_MINUTES: 20
    retry: *a1
  - command: .buildkite/scripts/steps/functional/security_serverless_entity_analytics.sh
    label: Serverless Entity Analytics - Security Cypress Tests
    agents: &a2
      machineType: n2-standard-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: &a3
      automatic:
        - exit_status: "-1"
          limit: 3
  - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
    label: Serverless Explore - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
    label: Serverless Investigations - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 14
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management.sh
    label: Serverless Rule Management - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_customization.sh
    label: Serverless Rule Management - Prebuilt Rules Customization - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_installation.sh
    label: Serverless Rule Management - Prebuilt Rules Installation - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_management.sh
    label: Serverless Rule Management - Prebuilt Rules Management - Security
      Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_upgrade.sh
    label: Serverless Rule Management - Prebuilt Rules Upgrade - Security Solution
      Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management.sh
    label: Rule Management - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 6
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_customization.sh
    label: Rule Management - Prebuilt Rules Customization - Security Solution
      Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_installation.sh
    label: Rule Management - Prebuilt Rules Installation - Security Solution Cypress
      Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_management.sh
    label: Rule Management - Prebuilt Rules Management - Security Solution Cypress
      Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_upgrade.sh
    label: Rule Management - Prebuilt Rules Upgrade - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine.sh
    label: Serverless Detection Engine - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine_exceptions.sh
    label: Serverless Detection Engine - Exceptions - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine.sh
    label: Detection Engine - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 7
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine_exceptions.sh
    label: Detection Engine - Exceptions - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_ai_assistant.sh
    label: Serverless AI Assistant - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_ai_assistant.sh
    label: AI Assistant - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_entity_analytics.sh
    label: Entity Analytics - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_explore.sh
    label: Explore - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_solution_investigations.sh
    label: Investigations - Security Solution Cypress Tests
    agents: *a2
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 9
    retry: *a3
  - command: .buildkite/scripts/steps/functional/osquery_cypress.sh
    label: Osquery Cypress Tests
    agents: &a4
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a3
  - command: .buildkite/scripts/steps/functional/security_serverless_osquery.sh
    label: Osquery Cypress Tests on Serverless
    agents: *a4
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a3
  - command: .buildkite/scripts/steps/functional/defend_workflows.sh
    label: Defend Workflows Cypress Tests
    agents: &a5
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
      enableNestedVirtualization: true
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 24
    retry: *a3
  - command: .buildkite/scripts/steps/functional/defend_workflows_serverless.sh
    label: Defend Workflows Cypress Tests on Serverless
    agents: *a5
    depends_on:
      - build
    timeout_in_minutes: 60
    parallelism: 16
    retry: *a3
  - wait: null
    continue_on_failure: true
  - command: .buildkite/scripts/lifecycle/post_build.sh
    label: Post-Build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
"
`;

exports[`pipelines on_merge matches snapshot 1`] = `
"env:
  GITHUB_COMMIT_STATUS_ENABLED: "true"
  GITHUB_COMMIT_STATUS_CONTEXT: buildkite/on-merge
steps:
  - command: .buildkite/scripts/lifecycle/pre_build.sh
    label: Pre-Build
    key: pre_build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    retry: &a1
      automatic:
        - exit_status: "*"
          limit: 1
  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
    label: Pick Test Group Run Order
    key: pick_test_group_run_order
    agents:
      provider: k8s
      image: docker.elastic.co/ci-agent-images/kibana/ci-minimal
      imageUID: "1000"
    plugins:
      - sparse-checkout#v1.6.0:
          no_cone: true
          paths:
            - /.buildkite/
            - /.node-version
            - /package.json
            - /tsconfig.base.json
            - /versions.json
            - /kibana.jsonc
            - "**/kibana.jsonc"
            - "**/tsconfig.json"
            - "**/jest.config.js"
            - "**/jest.integration.config.js"
            - "**/*.test.js"
            - "**/*.test.mjs"
            - "**/*.test.ts"
            - "**/*.test.tsx"
          cleanup_sparse_state: true
          post_checkout:
            unshallow: true
    timeout_in_minutes: 15
    env:
      JEST_UNIT_SCRIPT: .buildkite/scripts/steps/test/jest.sh
      JEST_INTEGRATION_SCRIPT: .buildkite/scripts/steps/test/jest_integration.sh
      FTR_CONFIGS_SCRIPT: .buildkite/scripts/steps/test/ftr_configs.sh
      FTR_TEST_CHANNELS: ci-on-commit
      FTR_CONFIGS_DEPS: build
    retry: *a1
  - wait: null
    depends_on: pre_build
  - command: .buildkite/scripts/steps/store_cache.sh
    label: Store Cache for build
    id: store_cache
    agents:
      machineType: n2-highcpu-8
    timeout_in_minutes: 10
    soft_fail: true
    depends_on:
      - terrazzo-initial-pipeline-upload
  - command: .buildkite/scripts/steps/on_merge_build_and_metrics.sh
    label: Build Kibana Distribution
    key: build
    agents:
      image: family/kibana-minimal-ubuntu-2604
      machineType: c4d-standard-16
      diskType: hyperdisk-balanced
      diskSizeGb: 50
      buildDirectory: /dev/shm/bk
      zones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d
    timeout_in_minutes: 60
    retry: *a1
  - command: .buildkite/scripts/steps/quick_checks.sh
    label: Quick Checks
    key: quick_checks
    agents:
      machineType: n2d-standard-8
      preemptible: true
      spotZones: us-central1-b,us-central1-c,us-central1-f
    timeout_in_minutes: 60
    retry: &a2
      automatic:
        - exit_status: "-1"
          limit: 3
  - command: .buildkite/scripts/steps/checks.sh
    label: Checks
    key: checks
    agents:
      machineType: n2d-standard-2
      preemptible: true
      spotZones: us-central1-b,us-central1-c,us-central1-f
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/lint.sh
    label: Linting
    key: linting
    agents:
      machineType: n4-standard-16
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/lint_with_types.sh
    label: Linting (with types)
    key: linting_with_types
    agents:
      machineType: n4-standard-32
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/lint_with_oxlint.sh
    label: Linting (with oxlint)
    key: linting_with_oxlint
    agents:
      machineType: n4-standard-4
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/typecheck/check_types.sh
    label: Check Types
    key: check_types
    agents:
      machineType: n4-highcpu-32
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    env:
      UPLOAD_ARCHIVE: "true"
    retry: *a2
  - command: .buildkite/scripts/steps/checks/capture_oas_snapshot.sh
    label: Check OAS Snapshot
    key: check_oas_snapshot
    agents:
      machineType: n2d-highmem-4
      preemptible: true
      spotZones: us-central1-b,us-central1-c,us-central1-f
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/report_package_metrics.sh
    label: Report Package Metrics
    key: report_package_metrics
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 15
    retry:
      automatic:
        - exit_status: "-1"
          limit: 3
        - exit_status: "*"
          limit: 1
  - command: .buildkite/scripts/steps/ci_stats_ready.sh
    label: Mark CI Stats as ready
    key: ci_stats_ready
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    depends_on:
      - build
      - report_package_metrics
    retry: *a1
  - command: .buildkite/scripts/steps/test/scout/test_run_builder.sh
    label: Scout Test Run Builder
    key: build_scout_tests
    agents:
      machineType: n2d-standard-8
    timeout_in_minutes: 20
    env:
      SCOUT_TEST_DISTRIBUTION_STRATEGY: lanes
      SCOUT_TEST_LANES_GROUP_DEPS: build_scout_tests,build
      SCOUT_TEST_CHANNELS: ci-on-commit
      SCOUT_TEST_LANE_TARGET_RUNTIME_MINUTES: 20
      SCOUT_TEST_SERVER_START_TIMEOUT_SECONDS: 300
      SCOUT_TEST_LANE_ESTIMATED_SETUP_MINUTES: 5
    retry: *a1
  - label: Trigger Security Solution on-merge tests
    trigger: kibana-security-solution-on-merge
    async: false
    soft_fail: true
    depends_on:
      - build
    build:
      branch: \${BUILDKITE_BRANCH}
      commit: \${BUILDKITE_COMMIT}
      env:
        KIBANA_BUILD_ID: \${BUILDKITE_BUILD_ID}
  - command: .buildkite/scripts/steps/storybooks/build_and_upload.sh
    label: Build Storybooks
    key: storybooks
    agents:
      machineType: n4-standard-16
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    depends_on:
      - build
    timeout_in_minutes: 60
    retry: *a2
  - command: .buildkite/scripts/steps/openapi_publishing/publish_oas_docs.sh
    label: Publish OAS docs to bump.sh
    agents:
      machineType: n2-standard-2
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    depends_on:
      - build
    timeout_in_minutes: 60
    soft_fail: true
    retry: *a2
  - command: .buildkite/scripts/steps/archive_so_migration_snapshot.sh
      target/plugin_so_types_snapshot.json
    label: Extract Saved Object migration plugin types
    agents:
      machineType: n2-standard-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    artifact_paths: target/plugin_so_types_snapshot.json
    depends_on:
      - build
    timeout_in_minutes: 30
    retry: *a2
  - wait: null
    continue_on_failure: true
  - command: .buildkite/scripts/lifecycle/post_build.sh
    label: Post-Build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
  - wait: null
  - command: .buildkite/scripts/steps/artifacts/docker_image_trigger.sh
    label: Trigger container image build
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    retry: *a1
"
`;

exports[`pipelines pull_request matches snapshot 1`] = `
"env:
  KBN_ES_SNAPSHOT_USE_CACHED: "true"
steps:
  - command: .buildkite/scripts/steps/build_kibana.sh
    label: Build Kibana Distribution
    key: build
    agents:
      image: family/kibana-minimal-ubuntu-2604
      machineType: c4d-standard-16
      diskType: hyperdisk-balanced
      diskSizeGb: 50
      buildDirectory: /dev/shm/bk
      zones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d
    timeout_in_minutes: 60
    retry: &a1
      automatic:
        - exit_status: "-1"
          limit: 3
  - command: .buildkite/scripts/steps/quick_checks.sh
    label: Quick Checks
    key: quick_checks
    agents:
      machineType: n2d-standard-8
      preemptible: true
      spotZones: us-central1-b,us-central1-c,us-central1-f
    timeout_in_minutes: 60
    env: &a2
      CHECK_GATE: "true"
    retry: *a1
  - command: .buildkite/scripts/steps/checks.sh
    label: Checks
    key: checks
    agents:
      machineType: n2d-standard-2
      preemptible: true
      spotZones: us-central1-b,us-central1-c,us-central1-f
    timeout_in_minutes: 60
    env: *a2
    retry: *a1
  - command: .buildkite/scripts/steps/lint.sh
    label: Linting
    key: linting
    agents:
      machineType: n4-standard-16
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    env: *a2
    retry: *a1
  - command: .buildkite/scripts/steps/lint_with_types.sh
    label: Linting (with types)
    key: linting_with_types
    agents:
      machineType: n4-standard-32
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    env: *a2
    retry: *a1
  - command: .buildkite/scripts/steps/lint_with_oxlint.sh
    label: Linting (with oxlint)
    key: linting_with_oxlint
    agents:
      machineType: n4-standard-4
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    env: *a2
    retry: *a1
  - command: .buildkite/scripts/steps/typecheck/check_types.sh
    label: Check Types
    key: check_types
    agents:
      machineType: n4-highcpu-32
      preemptible: true
      spotZones: us-central1-a,us-central1-b,us-central1-c,us-central1-f,us-east1-b,us-east1-c,us-east1-d,us-west1-a,us-west1-b,us-west1-c
      diskType: hyperdisk-balanced
    timeout_in_minutes: 60
    env:
      CHECK_GATE: "true"
      RESTORE_ARCHIVE: "true"
      UPLOAD_ARCHIVE: "true"
    retry: *a1
  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
    label: Pick Test Group Run Order
    key: pick_test_group_run_order
    agents:
      provider: k8s
      image: docker.elastic.co/ci-agent-images/kibana/ci-minimal
      imageUID: "1000"
    plugins:
      - sparse-checkout#v1.6.0:
          no_cone: true
          paths:
            - /.buildkite/
            - /.node-version
            - /package.json
            - /tsconfig.base.json
            - /versions.json
            - /kibana.jsonc
            - "**/kibana.jsonc"
            - "**/tsconfig.json"
            - "**/jest.config.js"
            - "**/jest.integration.config.js"
            - "**/*.test.js"
            - "**/*.test.mjs"
            - "**/*.test.ts"
            - "**/*.test.tsx"
          cleanup_sparse_state: true
          post_checkout:
            unshallow: true
    timeout_in_minutes: 15
    env:
      JEST_UNIT_SCRIPT: .buildkite/scripts/steps/test/jest.sh
      JEST_INTEGRATION_SCRIPT: .buildkite/scripts/steps/test/jest_integration.sh
      FTR_CONFIGS_SCRIPT: .buildkite/scripts/steps/test/ftr_configs.sh
      FTR_TEST_CHANNELS: ci-on-commit
      FTR_CONFIGS_DEPS: build
    retry: &a3
      automatic:
        - exit_status: "*"
          limit: 1
  - command: .buildkite/scripts/steps/test/scout/test_run_builder.sh
    label: Scout Test Run Builder
    key: build_scout_tests
    agents:
      machineType: n2d-standard-8
    timeout_in_minutes: 20
    env:
      SCOUT_TEST_DISTRIBUTION_STRATEGY: lanes
      SCOUT_TEST_LANES_GROUP_DEPS: build_scout_tests,build
      SCOUT_TEST_CHANNELS: ci-on-commit
      SCOUT_TEST_LANE_TARGET_RUNTIME_MINUTES: 20
      SCOUT_TEST_SERVER_START_TIMEOUT_SECONDS: 300
      SCOUT_TEST_LANE_ESTIMATED_SETUP_MINUTES: 5
      SELECTIVE_TESTING_ENABLED: "true"
    retry: *a3
  - command: .buildkite/scripts/steps/ci_stats_ready.sh
    label: Mark CI Stats as ready
    key: ci_stats_ready
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 10
    depends_on:
      - build
      - report_package_metrics
    retry: *a3
  - command: .buildkite/scripts/steps/report_package_metrics.sh
    label: Report Package Metrics
    key: report_package_metrics
    agents:
      machineType: n2-standard-2
    timeout_in_minutes: 15
    retry: *a1
"
`;

exports[`pipelines security_solution_on_merge matches snapshot 1`] = `
"steps:
  - command: .buildkite/scripts/steps/functional/security_serverless_entity_analytics.sh
    label: Serverless Entity Analytics - Security Cypress Tests
    branches: main
    agents: &a1
      machineType: n2-standard-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    timeout_in_minutes: 60
    parallelism: 2
    retry: &a2
      automatic:
        - exit_status: "-1"
          limit: 3
        - exit_status: "*"
          limit: 1
  - command: .buildkite/scripts/steps/functional/security_serverless_explore.sh
    label: Serverless Explore - Security Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_investigations.sh
    label: Serverless Investigations - Security Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 14
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management.sh
    label: Serverless Rule Management - Security Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_customization.sh
    label: Serverless Rule Management - Prebuilt Rules Customization - Security
      Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_installation.sh
    label: Serverless Rule Management - Prebuilt Rules Installation - Security
      Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_management.sh
    label: Serverless Rule Management - Prebuilt Rules Management - Security
      Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_rule_management_prebuilt_rules_upgrade.sh
    label: Serverless Rule Management - Prebuilt Rules Upgrade - Security Solution
      Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management.sh
    label: Rule Management - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 6
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_customization.sh
    label: Rule Management - Prebuilt Rules Customization - Security Solution
      Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_installation.sh
    label: Rule Management - Prebuilt Rules Installation - Security Solution Cypress
      Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_management.sh
    label: Rule Management - Prebuilt Rules Management - Security Solution Cypress
      Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_rule_management_prebuilt_rules_upgrade.sh
    label: Rule Management - Prebuilt Rules Upgrade - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine.sh
    label: Serverless Detection Engine - Security Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 8
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_detection_engine_exceptions.sh
    label: Serverless Detection Engine - Exceptions - Security Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine.sh
    label: Detection Engine - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 7
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_detection_engine_exceptions.sh
    label: Detection Engine - Exceptions - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_ai_assistant.sh
    label: Serverless AI Assistant - Security Solution Cypress Tests
    branches: main
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_ai_assistant.sh
    label: AI Assistant - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 1
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_entity_analytics.sh
    label: Entity Analytics - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_explore.sh
    label: Explore - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 2
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_solution_investigations.sh
    label: Investigations - Security Solution Cypress Tests
    agents: *a1
    timeout_in_minutes: 60
    parallelism: 9
    retry: *a2
  - command: .buildkite/scripts/steps/functional/osquery_cypress.sh
    label: Osquery Cypress Tests
    agents: &a3
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
    timeout_in_minutes: 60
    parallelism: 4
    retry: *a2
  - command: .buildkite/scripts/steps/functional/security_serverless_osquery.sh
    label: Osquery Cypress Tests on Serverless
    branches: main
    agents: *a3
    timeout_in_minutes: 60
    parallelism: 3
    retry: *a2
  - command: .buildkite/scripts/steps/functional/defend_workflows.sh
    label: Defend Workflows Cypress Tests
    agents: &a4
      machineType: n2-highmem-4
      preemptible: true
      spotZones: us-central1-f,us-central1-c,us-central1-a
      enableNestedVirtualization: true
    timeout_in_minutes: 60
    parallelism: 24
    retry: *a2
  - command: .buildkite/scripts/steps/functional/defend_workflows_serverless.sh
    label: Defend Workflows Cypress Tests on Serverless
    branches: main
    agents: *a4
    timeout_in_minutes: 60
    parallelism: 16
    retry: *a2
"
`;
